--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Homework-26</title>
-    </head>
-    <body>        
-        <h1>Homework-26</h1>
-        <h2>All the tasks are here</h2>
-        <h3>Have a nice day :)</h3>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Homework-36</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+        <input type="text">
         <script src="main.js"></script>
-    </body>
-    </html>
+</body>
+
+
+
+</html>
